--- a/modules/contract_insurance_document_request/locale/fr.po
+++ b/modules/contract_insurance_document_request/locale/fr.po
@@ -166,6 +166,10 @@ msgctxt "field:offered.product,document_rules:"
 msgid "Document Rules"
 msgstr "Règles de gestion des documents"
 
+msgctxt "help:document.request.line,details:"
+msgid "Add details about the received document"
+msgstr "Permet d'ajouter des précisions sur le document reçu"
+
 msgctxt "help:document.rule,rule:"
 msgid ""
 "The rule must return a dictionnary with document description codes as keys, "
@@ -185,7 +189,8 @@ msgstr ""
 
 msgctxt "help:offered.product,document_rules:"
 msgid ""
-"Define which documents are requested and required during contract subscription"
+"Define which documents are requested and required during contract "
+"subscription"
 msgstr ""
 "Définit quels documents sont demandés et requis lors de la souscription du "
 "contrat"
