--- a/modules/contract_insurance_health_fr/locale/fr.po
+++ b/modules/contract_insurance_health_fr/locale/fr.po
@@ -6,6 +6,14 @@ msgctxt "error:contract:"
 msgid "SSN is required for covered element %s"
 msgstr "Le NIR est requis pour les personnes couvertes %s"
 
+msgctxt "error:health.care_system:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
+msgctxt "error:health.insurance_fund:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
 msgctxt "error:health.party_complement:"
 msgid "HC system must be defined"
 msgstr "Le régime doit être renseigné"
@@ -171,6 +179,32 @@ msgstr "Ayant droit"
 msgctxt "field:party.party,social_security_insured:"
 msgid "Social Security Insured"
 msgstr "Assuré social"
+
+msgctxt "help:health.care_system,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
+msgctxt "help:health.care_system,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
+msgctxt "help:health.insurance_fund,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
+msgctxt "help:health.insurance_fund,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
 
 msgctxt "help:offered.product,print_madelin_reports:"
 msgid ""
