--- a/modules/coog_core/locale/fr.po
+++ b/modules/coog_core/locale/fr.po
@@ -1547,16 +1547,15 @@ msgstr ""
 
 msgctxt "help:event.type.action,at_commit:"
 msgid ""
-"If set, this ensure the action will be executed at the last "
-"moment and that everything has been executed correctly before "
-"processing this action. This could be usefull for report "
-"generation and avoid documents to be sent whereas something "
-"went wrong during processing."
+"If set, this ensure the action will be executed at the last moment and that "
+"everything has been executed correctly before processing this action. This "
+"could be usefull for report generation and avoid documents to be sent "
+"whereas something went wrong during processing."
 msgstr ""
-"Si coché, assure que l'action sera executée au dernier moment et que "
-"tout ce qui précède à bien été executé correctement. Cela"
-" peut être utile lors de la génération des documents et éviter leur envoi"
-" si quelque chose s'est mal déroulé au préalable."
+"Si coché, assure que l'action sera executée au dernier moment et que tout ce"
+" qui précède à bien été executé correctement. Cela peut être utile lors de "
+"la génération des documents et éviter leur envoi si quelque chose s'est mal "
+"déroulé au préalable."
 
 msgctxt "help:event.type.action,pyson_condition:"
 msgid ""
@@ -1574,18 +1573,6 @@ msgctxt "help:extra_details.configuration.line,selection_sorted:"
 msgid "If the selection must be sorted on label"
 msgstr "Si la sélection doit être triée par le libéllé"
 
-msgctxt "help:ir.sequence,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
-msgstr ""
-"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
-"l'ensemble des objets de configuration liés à un même label."
-
-msgctxt "help:ir.sequence.strict,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
-msgstr ""
-"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
-"l'ensemble des objets de configuration liés à un même label."
-
 msgctxt "help:ir.api.identity,identifier:"
 msgid "The identifier to match against"
 msgstr "L'identifiant externe à utiliser"
@@ -1599,6 +1586,18 @@ msgstr ""
 msgctxt "help:ir.api.identity,user:"
 msgid "If set, this identity will be bound to this user"
 msgstr "Si renseigné, l'identité sera liée à cet utilisateur"
+
+msgctxt "help:ir.sequence,tags:"
+msgid "Add and search all related configuration objects based on a tag"
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
+
+msgctxt "help:ir.sequence.strict,tags:"
+msgid "Add and search all related configuration objects based on a tag"
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
 
 msgctxt "help:ir.test_case.instance,test_method_name:"
 msgid ""
@@ -1950,7 +1949,7 @@ msgid "Import Wizard"
 msgstr "Importer un fichier"
 
 msgctxt "model:ir.ui.menu,name:menu_open_api_identity"
-msgid "API Identity"
+msgid "API Identities"
 msgstr "Identités API"
 
 msgctxt "model:ir.ui.menu,name:menu_tag_form"
