--- a/modules/party_cog/locale/fr.po
+++ b/modules/party_cog/locale/fr.po
@@ -75,12 +75,20 @@ msgctxt "error:party.party:"
 msgid "Duplicate(s) already exist(s) : %s"
 msgstr "Des doublon(s) existe(nt) déjà : %s"
 
+msgctxt "error:party.relation.type:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
 msgctxt "error:party.replace:"
 msgid ""
 "Parties have different first names: %(source_name)s vs %(destination_name)s."
 msgstr ""
 "Les tiers ont des prénoms différents: %(source_name)s vs "
 "%(destination_name)s."
+
+msgctxt "field:api.party,id:"
+msgid "ID"
+msgstr "Identifiant"
 
 msgctxt "field:country.address.line,country:"
 msgid "Country"
@@ -574,6 +582,10 @@ msgctxt "field:party.relation.type,code:"
 msgid "Code"
 msgstr "Code"
 
+msgctxt "field:party.relation.type,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:party.relation.type,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -937,6 +949,19 @@ msgstr "La valeur définie initialisera la langue sur les tiers"
 msgctxt "help:party.party,identities:"
 msgid "The list of identities which will be associated to this party"
 msgstr "La liste des identités associées à ce tiers"
+
+msgctxt "help:party.relation.type,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
+msgctxt "model:api.party,name:"
+msgid "API Party"
+msgstr ""
 
 msgctxt "model:country.address.line,name:"
 msgid "Country Address Line"
