--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -202,6 +202,14 @@ msgstr ""
 "contracts résiliés n'ayant pas excédé leur durée de conservation : "
 "%(contracts)s "
 
+msgctxt "field:api.contract,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:api.rule_runtime,id:"
+msgid "ID"
+msgstr "Identifiant"
+
 msgctxt "field:contract,activation_history:"
 msgid "Activation History"
 msgstr "Historique d'activation"
@@ -1437,6 +1445,14 @@ msgstr "Générateur de numéro de devis pour un contrat"
 msgctxt "help:offered.product.quote_number_sequence,quote_number_sequence:"
 msgid "Sequence used to initalize the quote number"
 msgstr "Générateur de numéro utilisé pour le numéro de devis"
+
+msgctxt "model:api.contract,name:"
+msgid "API Contract"
+msgstr ""
+
+msgctxt "model:api.rule_runtime,name:"
+msgid "Rule Runtime"
+msgstr ""
 
 msgctxt "model:contract,name:"
 msgid "Contract"
