third_party_protocol_almerys: add Almerys chain batch (#3020)
Fix #00000

--- a/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add Almerys chain
 * OTH#00000 Itération sur FEA#11526
 * OTH#00000 Itération sur FEA#11526
 * OTH#00000: Itération sur le batch de génération du flux v3
