--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add Almerys chain
 * OTH#00000 Iteration on FEA#11526
 * OTH#00000 Iteration on FEA#11526
 * OTH#00000: Updates on flux v3 file batch
