--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12304 Declare party field modification only if the previous value was not empty
 * BUG#12278 Fix support personalized rate at 0
 * BUG#12042 Fix pasrau message generation to prevent duplicate lines
 * BUG#11421 Update the default pasrau rates in xml
