claim_salary_fr: Fix pmss calculation for last_year salary_mode (#3021)
Fix #12308

--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12308 Fix PMSS calculation for 'last year' salary mode
 * BUG#12134 Fix prorata calculation for non monthly salary modes
 * BUG#12038 Fix endorsement behavior for the "Revaluation on basic salary" field
 * BUG#11767 Make sure default tables are up to date
