--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#00000 Fix JSON export and import issues for billing rules, endorsement definitions, questionnaires and third party protocols
 * BUG#00000 Fix various JSON export and import issues on: journal sequences, billing rules, distribution channels and party addresses
 * BUG#12285 Fix fields_changed_since_date method by adding check if past instances found
 * OTH#00000 fix get_good_version_at_date method on revisionmixin when the id of
