--- a/modules/account_statement_cog/doc/en/CHANGELOG
+++ b/modules/account_statement_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12298 Refactor statement line group cancelation
 * BUG#12277 Statement creation wizard crashes when launched
 * BUG#11627 Fix the disappearance of the invoice on the bank deposit when entering the amount because that account on the statement line is changed
 * BUG#11316 Fix the disappearance of the invoice on the bank deposit slip if we enter the invoice and then the amount.
