--- a/modules/account_statement_cog/doc/fr/CHANGELOG
+++ b/modules/account_statement_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12298 Refactorisation du code d'annulation de groupe de ligne de relevés
 * BUG#12277 L'assistant de création des relevés plante à son lancement
 * BUG#11627 Correction de la disparition de la valeur du champ quittance sur une ligne relevé en entrant le montant à cause du changement du compte
 * BUG#11316 Correction de la disparition de la valeur du champ quittance sur une ligne de relevé si on entre la quittance puis le montant
