--- a/modules/document_request/doc/fr/CHANGELOG
+++ b/modules/document_request/doc/fr/CHANGELOG
@@ -1,5 +1,6 @@
 * FEA#11908 Ajouter un champ commentaire à la demande de document
 * BUG#11602 Permettre la création de demandes de documents depuis une vue liste
+* FEA#12049 Saisie de données et génération de documents pour les demandes de documents
 
 Version 2.4 - 2019-04-12
 * BUG#11130 Correction du batch de traitement des demandes de documents
